src/pages/sign-up-page/signUpPage.css
.sign-up-page {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  background-image: url("../../assets/hands.jpg");
  background-size: cover;
  background-repeat: no-repeat;
}
.sign-up-container,
.form-container,
.sign-up-inputs-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.sign-up-container,
.sign-up-input {
  border: 2px solid rgba(53, 0, 53);
}
.sign-up-container,
.form-container {
  align-items: center;
  width: max-content;
}
.sign-up-container > h1,
.sign-up-inputs-container > label,
.sign-up-inputs {
  color: rgba(53, 0, 53);
}
.sign-up-button,
.sign-up-inputs-container > label {
  margin-top: 1.5rem;
}
.sign-up-page > nav {
  border-radius: 30px;
  border: 2px solid rgba(53, 0, 53);
  width: 85%;
  margin-top: 1rem;
  background-color: rgba(255, 255, 255, 0.5);
}
.sign-up-container {
  height: 600px;
  border-radius: 10px;
  padding: 0.5rem 1rem;
  background-color: white;
  margin-bottom: 2rem;
}
.sign-up-container > img {
  height: 8rem;
  scale: 1.3;
  padding: 0.5rem 0;
}
.sign-up-container > h1 {
  z-index: 1;
}
.form-container {
  padding: 0.5rem 0.75rem;
}
.sign-up-inputs-container > label {
  margin-bottom: 0.75rem;
  font-size: 1.25rem;
}
.sign-up-inputs {
  width: 50ch;
  height: 2rem;
  padding: 0.25rem 0.75rem;
  font-size: 1rem;
  color: white;
  background-color: rgba(53, 0, 53);
}
.sign-up-inputs ~ span {
  width: 50ch;
  color: red;
  display: none;
}
.sign-up-button {
  width: 15ch;
  color: rgba(53, 0, 53);
  background-color: white;
  border-color: black;
  transition: color, background-color, 200ms ease-out;
}
.sign-up-button:hover {
  color: white;
  background-color: rgba(53, 0, 53);
  border-color: white;
  transition: color, background-color, 200ms ease-in;
}
.invalid,
.valid {
  color: red;
}
.invalid {
  display: block;
}
.valid {
  display: none;
}
.sign-up-inputs-container {
  position: relative;
}
.visible {
  position: absolute;
  bottom: -5.35rem;
  right: 1rem;
  color: white;
  cursor: pointer;
  z-index: 1;
}
.invisible {
  position: absolute;
  bottom: -5.35rem;
  right: 1rem;
  color: white;
  cursor: pointer;
  z-index: 1;
  display: none;
}

